# hafly

./: .gitignore  404.html  CHANGELOG.md  README.md  default.nix  hafly.cabal  hafly.nix  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: build.yml
app/: Main.hs
app/Language/Hafly/: Ast.hs  Interpreter.hs  Parser.hs  Stdlib.hs
developer_guide/: index.html
docs/: index.md  tutorial.md
site/: 404.html  index.html  sitemap.xml
site/search/: search_index.json
tests/: Tests.hs
tutorial/: index.html
