cabal-version:      2.4
name:               hafly
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nathan Bedell
maintainer:         nbedell@tulane.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library hafly-lib
    exposed-modules:
        Language.Hafly.Parser
      , Language.Hafly.Interpreter
      , Language.Hafly.Ast
    hs-source-dirs:   app
    build-depends:    
        base ^>=4.14.3.0
      , hashmap
      , text
      , megaparsec
      , parser-combinators
    default-extensions:
        LambdaCase
      , TypeApplications
      , RecordWildCards
      , ScopedTypeVariables
      , OverloadedStrings

executable hafly
    main-is:          app/Main.hs
    build-depends:    base ^>=4.14.3.0
                    , hafly-lib
                    , hashmap
                    , text
                    , haskeline
    default-extensions:
        LambdaCase
      , TypeApplications
      , ScopedTypeVariables
      , RecordWildCards
    default-language: Haskell2010
