cabal-version: >= 1.10
build-type: Simple
name:               hafly
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nathan Bedell
maintainer:         nbedell@tulane.edu

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Language.Hafly.Parser
      , Language.Hafly.Interpreter
      , Language.Hafly.Ast
      , Language.Hafly.Stdlib
    hs-source-dirs:   app
    build-depends:    
        base 
      , multimap
      , hashmap
      , text
      , megaparsec
      , parser-combinators
    default-extensions:
        LambdaCase
      , TypeApplications
      , RecordWildCards
      , ScopedTypeVariables
      , OverloadedStrings
      , ExistentialQuantification
      , KindSignatures

test-suite main-tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      Paths_hafly
  hs-source-dirs:
      tests
  build-depends:
      base
    , hafly
    , tasty
    , tasty-hunit
  extensions:
      TemplateHaskell, QuasiQuotes
  default-language: Haskell2010

-- executable hafly
--     main-is:          app/Main.hs
--     build-depends:    base
--                     , hafly
--                     , multimap
--                     , text
--                     , haskeline
--                     , parser-combinators
--                     , megaparsec
--                     , hashmap
--     default-extensions:
--         LambdaCase
--       , TypeApplications
--       , ScopedTypeVariables
--       , RecordWildCards
--       , GADTs
--     default-language: Haskell2010
